add basic styling to jobs

--- a/TraumJobs/Info.plist
+++ b/TraumJobs/Info.plist
@@ -6,6 +6,8 @@
 	<array>
 		<string>Oswald-Medium.ttf</string>
 		<string>RobotoCondensed-Regular.ttf</string>
+		<string>Roboto-SemiBold.ttf</string>
+		<string>Roboto-Light.ttf</string>
 	</array>
 </dict>
 </plist>
